# covid19-dashboard

./: README.md  pyproject.toml  run.py
src/covid_dashboard/: __init__.py  app.py  config.py  data_pipeline.py  utils.py
src/covid_dashboard/assets/css/: style.css
src/covid_dashboard/assets/js/: main.js
src/templates/: 404.html  _cards.html  _footer.html  _navbar.html  base.html  country.html  index.html  map.html
tests/: test_app_factory.py
