[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covid-dashboard"
version = "0.1.0"
description = "COVID-19 Spread Analysis Dashboard (Flask + Folium)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Mobin Yousefi", email = "" }
]
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0",
  "pandas>=2.1",
  "folium>=0.16",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
  "black>=24.3.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "N"]